HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
 8-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding support for the title attribute for links,
           for adding the JavaScript Navigator.platform property,
           and for adding Javascript support for the Screen object.

Additions:
    1. Links, forms, and images now have a readable title property.
    2. The navigator object now supports the readable 'platform' property.
    3. The screen object is now supported, with properties availHeight and availWidth
    4. The Window.open function is now supported

Problems fixed:
    1. When not using Latin-1 encoding, URL string characters *, _, and - were improperly being encoded
    2. AuthorizationRequiredException was being thrown even when exceptions on error status was disabled


 4-Oct-2002
Additions:
    1. WebClient now supports a WebWindowListener which will be called when a new window is opened.

 3-Oct-2002
Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with generation of cookie headers that affects some servers.

Additions:
    1. Following the "_blank" target now creates a new web window, with its own set of frames. Following links or submitting
       forms will update the window from which the request originated. Requests may also now be initiated from an open window.
       The list of open windows is a property of the web client.
    2. The mechanism for searching for tables has been expanded to permit arbitrary search criteria, similar to that
       for links.

Problems fixed:
    1. The cookie header was being generated with a space after each ";" separator.

 2-Oct-2002
