@@ -14,6 +14,8 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>navigator - the Navigator object</li>
 <li>self - the Window itself</li>
 <li>window - a synonym for self</li>
+<li>name - r/w the name of the window (top-level frames only)</li>
+<li>opener - r/o the window which opened this one (top-level frames only)</li>
 </ul>
 <h4>events</h4>
 <ul>
